blog practice css nav bar

--- a/sillyCIA.html
+++ b/sillyCIA.html
@@ -31,7 +31,7 @@
         <p class="might-like">You might also like</p>
 
         <a href="http://www.theonion.com/articles/cia-to-shift-focus-to-greeting-cards,4312/">CIA To Shift Focus To Greeting Cards</a>
-        <link rel="stylesheet" href="index.css"/>
+        <link rel="stylesheet" href="sillyCIA.css"/>
     </body>
 </html>
 
