practice amkes perfect

--- a/blog.html
+++ b/blog.html
@@ -34,10 +34,22 @@
                 <p>
                     Cheesecake macaroon chocolate bar cotton candy. Bonbon gummies icing sweet sweet
                     caramels croissant pie gummies. Brownie tart jujubes cake chocolate cake brownie
-                    oat cake chupa chups chocolate bar. Liquorice bear claw powder brownie I love
+                    oat cake chupa chups chocolate bar.Liquorice bear claw powder brownie I love
                     icing caramels chocolate cheesecake. Liquorice muffin marzipan jujubes soufflé
                     wafer marshmallow wafer. I love fruitcake I love liquorice soufflé liquorice.
-                    Oat cake halvah dessert croissant bonbon sweet roll oat cake ice cream carrot cake. Marzipan cake sweet roll brownie lollipop liquorice apple pie. Oat cake tart apple pie sugar plum chocolate cake. Jujubes cake liquorice. Cake lollipop toffee chupa chups. Dragée carrot cake jujubes topping caramels. Topping cookie tootsie roll bear claw cotton candy carrot cake cookie cake. Liquorice cookie halvah marzipan lollipop. Muffin apple pie bear claw macaroon. Cake dessert cheesecake pudding. Carrot cake jelly-o apple pie brownie jelly beans gingerbread topping sugar plum. Icing sugar plum danish chocolate bar caramels muffin jelly chocolate sweet roll.
+                    Oat cake halvah dessert croissant bonbon sweet roll oat cake ice cream carrot 
+                    cake. Marzipan cake sweet roll brownie lollipop liquorice apple pie. Oat cake 
+                    tart apple pie sugar plum chocolate cake.Jujubes cake liquorice. Cake lollipop.
+                </p> 
+                <p>
+                     
+                    Toffee chupa chups. Dragée carrot cake jujubes topping caramels. Topping cookie 
+                    tootsie roll bear claw cotton candy carrot cake cookie cake. Liquorice cookie 
+                    halvah marzipan lollipop. Muffin apple pie bear claw macaroon. Cake dessert 
+                    cheesecake pudding. Carrot cake jelly-o apple pie brownie jelly beans gingerbread 
+                    topping sugar plum. Icing sugar plum danish chocolate bar caramels muffin jelly 
+                    chocolate sweet roll.
+                
                 </p>
             </div>
         </div>
